# cantaloupe

./: Cargo.toml  README.md
repomd/: .gitignore  Cargo.toml  README.md
repomd/.config/: spellcheck.toml  topic.dic
repomd/src/: error.rs  integration.rs  lib.rs  xml.rs
repomd/src/servings/: filelists.rs  index.rs  metadata.rs  mod.rs  other.rs  primary.rs  repofile.rs
repomd/tests/assets/: vlc-3.0.9.2-3.fc32.x86_64.rpm  wf-recorder-0.2.1-1.fc32.x86_64.rpm
src/: actions.rs  errors.rs  main.rs  redis.rs  repo.rs  upload.rs  xml.rs
