[package]
name = "cantaloupe"
version = "0.0.4"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
description = "rpm repository server with package deployment API"
keywords = ["rpm","repository","repo"]
homepage = "https://ahoi.io/projects/cantaloupe"
repository = "https://github.com/drahnr/cantaloupe.git"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
tokio = "0.2"
futures = "0.3"
actix = "0.9"
actix-web = "2"
redis = "0.15"
anyhow = "1"
thiserror = "1"
compression = "0.1"
sha2 = "0.8"
url =  { version = "2",features = ["serde"] }
bytes = "0.5"
serde = "1"
serde_json = "1"
rpm = { package = "rpm-rs", git = "https://github.com/drahnr/rpm-rs", features = ["signature-pgp"] }