[package]
name = "cantaloupe"
version = "0.0.4"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
description = "rpm repository server with package deployment API"
keywords = ["rpm","repository","repo"]
homepage = "https://ahoi.io/projects/cantaloupe"
repository = "https://github.com/drahnr/cantaloupe.git"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
tokio = "0.2"
futures = "0.3"
actix-web = "2"
actix-rt = "1"
redis = "0.17"
anyhow = "1"
thiserror = "1"
compression = "0.1"
sha2 = "0.9"
url =  { version = "2",features = ["serde"] }
bytes = "0.5"
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.7"
rpm = { package = "rpm-rs", version = "0.6.0", features = ["signature-pgp"] }
repo = { package = "repomd", path = "./repomd" }

[workspace]
members = ["repomd"]


[patch.crates-io]
rpm = { package="rpm-rs", path = "../rpm-rs", features = ["signature-pgp"] }
