[package]
name = "repomd"
version = "0.0.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
description = "rpm repository metadata compatible with createrepo servings"
keywords = ["rpm","repository","metadata", "createrepo", "repomd"]
homepage = "https://ahoi.io/projects/repomd"
repository = "https://github.com/drahnr/repomd.git"
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1"
compression = "0.1"
sha2 = "0.9"
url =  { version = "2",features = ["serde"] }
bytes = "0.5"
serde_json = "1"
log = "0.4"
serde = "1"
toml = "0.5"
quick-xml = { version = "0.18", features = ["serialize"] }
strum = "0.19"
strum_macros = "0.19"
indexmap = { version = "1", features = ["serde-1"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rpm = { package = "rpm-rs", version = "0.6.0", features = ["signature-pgp"] }
which = "4"
